# agent-zero

./: .gitignore  AGENTS.md  CHANGELOG.cli.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml  deploy-web.yml  release-cli.yml
data/assumptions_packs/baseline-v1/: GLOSSARY.md  README.md  assumptions.csv  manifest.yaml  policy.csv
data/scenario_packs/fast-elec-v1/: GLOSSARY.md  README.md  manifest.yaml  patches.csv  scenario.yaml
docs/: agentzero_core.md  agentzero_results_spec.md  agentzero_web_app.md  agentzero_web_app.txt  inputs-assumptions-and-scenarios-upgrade-path.md  story_data_products_schema.md  web_bundle_schema.md
src/agent_zero/: __init__.py  cli.py
src/agent_zero/io/: apply_patches.py  hashing.py  load_pack.py  validate.py
src/agent_zero/model/: agents.py  decisions.py  defaults.py  markets.py  simulate.py  world.py
src/agent_zero/post/: export_web.py  results.schema.json  results_pack.py  results_validation.py
src/agent_zero/story/: __init__.py  generator.py  tool_definitions.py  tools.py  types.py
src/agent_zero/story/examples/: agent_summary.json  caveats.json  drivers.json  headline_metrics.json  scenario_comparison.json  story_context.json
src/agent_zero/utils/: logging.py  types.py
tests/: conftest.py  test_patches.py  test_simulate.py  test_validate.py
tests/data/assumptions_packs/tiny-baseline/: assumptions.csv  manifest.yaml  policy.csv
tests/data/scenario_packs/tiny-scenario/: manifest.yaml  patches.csv  scenario.yaml
tests/e2e/: test_cli.py
tests/integration/: test_simulate.py  test_validate.py  test_validate_outputs_cli.py
tests/unit/: test_parse_years.py
tests/unit/io/: test_export_web.py  test_load_pack.py  test_patches.py  test_results_pack.py  test_results_validation.py  test_validate_unit.py
tests/unit/model/: test_agents.py  test_decision_traces.py  test_world.py
tests/unit/story/: __init__.py  test_generator.py  test_tools.py
web/: agents.json  package.json  pnpm-lock.yaml  screenshot-pages.ts  summary.json  svelte.config.js  timeseries.json  vitest.config.ts
web/src/: app.css  app.html
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/assumptions/: +page.svelte
web/src/routes/compare/: +page.svelte
web/src/routes/scenarios/: +page.svelte
web/static/: agent_traces.json  manifest.json
web/tests/: types.test.ts
web/tests/fixtures/web_bundle/: agent_traces.json  agents.json  assumptions_used.json  drivers.json  manifest.json  summary.json  timeseries.json
