[project]
name = "agent-zero"
version = "0.1.0"
requires-python = ">=3.10"
description = "Agent-based decarbonisation pathways model"
license = "MIT"
readme = "README.md"
authors = [
  {name = "dlg0"}
]
keywords = ["agent-based", "modeling", "decarbonisation", "simulation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pandas>=2.2",
  "pyarrow>=16.0",
  "numpy>=2.0",
  "pyyaml>=6.0",
  "click>=8.1"
]

[project.urls]
Homepage = "https://github.com/dlg0/agent-zero"
Repository = "https://github.com/dlg0/agent-zero"
Issues = "https://github.com/dlg0/agent-zero/issues"

[project.scripts]
agentzero = "agent_zero.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]